# ChangeLog for net-misc/rygel
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/rygel/ChangeLog,v 1.50 2014/04/06 21:29:02 eva Exp $

*rygel-0.22.0 (06 Apr 2014)

  06 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org> -rygel-0.18.4.ebuild,
  -rygel-0.20.0.ebuild, +rygel-0.22.0.ebuild:
  Version bump. Clean up old revisions.

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> rygel-0.20.3.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> rygel-0.20.3.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> rygel-0.20.3.ebuild:
  Fix wrong commit, bug 502160

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> rygel-0.20.3.ebuild:
  arch stable, bug 888

*rygel-0.20.3 (06 Feb 2014)

  06 Feb 2014; Gilles Dartiguelongue <eva@gentoo.org> +rygel-0.20.3.ebuild:
  Version bump.

*rygel-0.20.0 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +rygel-0.20.0.ebuild,
  -rygel-0.14.3.ebuild, -rygel-0.16.4.ebuild, -rygel-0.18.3.ebuild:
  Version bump for Gnome 3.10

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> rygel-0.18.4.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> rygel-0.18.4.ebuild:
  amd64 stable, bug #478252

  08 Sep 2013; Gilles Dartiguelongue <eva@gentoo.org> rygel-0.16.4.ebuild,
  rygel-0.18.3.ebuild, rygel-0.18.4.ebuild:
  Add gst-plugins-soup to dependencies per bug #482316, it was introduced in
  0.16 series.

*rygel-0.18.4 (11 Aug 2013)

  11 Aug 2013; Gilles Dartiguelongue <eva@gentoo.org> -rygel-0.18.2.ebuild,
  +rygel-0.18.4.ebuild:
  Version bump. Drop old revision.

*rygel-0.18.3 (24 Jul 2013)

  24 Jul 2013; Pacho Ramos <pacho@gentoo.org> +rygel-0.18.3.ebuild,
  -rygel-0.18.1.ebuild:
  Version bump, drop old

  14 May 2013; Gilles Dartiguelongue <eva@gentoo.org> rygel-0.18.1.ebuild,
  rygel-0.18.2.ebuild:
  Fix dependency of transcode USE flag.

*rygel-0.18.2 (13 May 2013)
