@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST rygel-0.20.3.tar.xz 3253440 SHA256 4e7e3105a1d27d126938b7530f60bd7867121188651cee806f36694fbd7dd349 SHA512 8dfbee55e0c4f74ee394a7a21c0b509b97e6e2e3a744fda1e0b03308a7b69ee308529cacd2e13793eeab23096489a9f6547852d202340c51ed50d08add4f613d WHIRLPOOL 9b0f063b4310267e7adc8d79af3b506df766b34bc4787eefd1bf56a5ca56f997a7fed716c9189be89d710a1ceb954130c96fd21e2bd0523dc3edb3c176d4a5d0
 DIST rygel-0.22.0.tar.xz 3339748 SHA256 b70fcfc361c3cb6624b15f1acfd8b77d47628d0efd7cba8c5059c4a85ae6882c SHA512 ac237695888c0fc84e806ea41bd7a9c1a6d961b40f51914ece916c909b69f3de15ffbcbee902e21b8797616ccf844e775a28d9229429483cc281d4540b00af6d WHIRLPOOL 0cbad2cd8a461d065a7e20cd4cc0cea1950864ef44c184677e9936d0f964a98f7c8c5b7b8bfab5ac4a68c0d0295c0c4fc2d9cd83a2775b7170c00934829d5480
+DIST rygel-0.22.1.tar.xz 3338948 SHA256 11e18979682685e1c078f0205cc1e53f3e7adac768eeba91026677972b8976bc SHA512 ab47f85857d43ed7fd68c344b608e77b01f2c6c79bb947defe63b5f62df8c914e34f8222b974a0bbfc1065d5b2523b1e008d89c54a7629bc5997c1409ef69069 WHIRLPOOL b573dae1de1a7d190a5a0360ea7d564ac6696044c5f47931bde3500d4959a0a29df89fc1dc554e8e831c03d1ade4acb9637687ee1af7867a10b262464a7015bb
 EBUILD rygel-0.20.3.ebuild 2327 SHA256 1aad06c03c525cafe06e147ca78ca9822055bbea69dba23729ec405268fd6c4b SHA512 47f1d5817ffc385b89d4fbb9028685881b2a4ac85b54edb200ea5fc187864d1ef141248562937d1387c93a971b2d6bf0b61aef4bc0e27f3e42631e10e16f0bf0 WHIRLPOOL 25904faf9cbb44b5bb29a1e8d2d0f0c6365623af8898b143cba222fab20a0329baa507283ab7b7e5abd3f803256c129e90c3066bdc95cf86c69281791a7747ec
 EBUILD rygel-0.22.0.ebuild 2305 SHA256 3db0c08431f22aeb09423fa3022333320507f46b15816e8ae62ce6d6270d4382 SHA512 5031cbe6d72910ea5ed2768436aceac77a5ad878b6ac4515fa35646b03841a7cef91a8dfbcbb043bfd23c8b6d8ab53b76682e5e9e452ce3cb38c41d6979c3f83 WHIRLPOOL 8de9be166aaf48f14a7e12d6ec869f20c6dc5ec45e24eedd21bf7f0e115f9fd1c793745b355397ddb9ec2239bf28119a559123945dc83f9db58fe4ffd703b8f1
-MISC ChangeLog 7676 SHA256 a2d08562a5bc65d4c1fa20fc94a1330427ac1ed1231dc254ac7690894f5ab26a SHA512 49ff2876a387b72f595508e71138f9e963ccae1e6d142e9704999f33a651e82ab51e2fdb9a1cfcca2223cfff79bf94d49de73378ec409fcab5f4c0e55057aa95 WHIRLPOOL 82deeaead218519f08ed28927e329e59da0a986cfbd0dd2c68a39c99c35f2f8b8eeb6f5d04259a4f280a6fd2c2a1c1ca8f34b00a3ad37ebaaddb93efc403db7c
+EBUILD rygel-0.22.1.ebuild 2317 SHA256 8d2aa75b6e227c7dfe9e219985ca16f03fc1ad8a303778c72a2d17dc1881692a SHA512 4af413849b1036cbbfd6c1ff573cda3c74af826f41d89a1294e59def6d7568751f7cfafea9b43d578c8f1c33b2d4bf30a37c0d5998b0614c13deef0b87ea8414 WHIRLPOOL 67792db3619ce16a5ff021c2b624e26920322c2ebf165b9c0151b208f58547962de94d64924b9c62270e601c3ba7371a578e11555347f02582f86135849e9551
+MISC ChangeLog 7791 SHA256 a5e6a51c575a7fb0a612a454bd9cdb87c8a73026daadf01baf168adb74151174 SHA512 fe4f2cf3fc7ef8653cdc16ba667f89cacc2d72380ea79966541c581496d720a786a481f8b9793ad784ce6056e7977a43813ac14e0aca32d096b87923f608cc2d WHIRLPOOL c8561175191897090480ce223d4302ef0c9f4c7bc5f90b450d7a14ccb7a36692012b28cb61f7118faeb6b7b5212fa616292de9fccd9852f8afa050526f60a67e
 MISC metadata.xml 332 SHA256 b9cc50e6e230ce49861b5d65ed489f31c2c06483210a9813e0fde8e24e93d81d SHA512 47462f5468e5445b3324d311a4a17801c115e35916e57897745507789679442558888c87f905f59c2c17b682611e5a1a8d3b49df60398e936bca53efe4648735 WHIRLPOOL 2051d16b21c79f25255fe56588ad64f6ba45d1bb8c5d905aa90ab612452ded16e481b09cf267e5ca877e37ce0e67a8fd276faa86bed1b76ee92de4e397a9b392
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNBxx8ACgkQ1fmVwcYIWAYSdACgweKpYDiwS1YIeotDkoQD4oQS
-DREAoIL8raKUvv5PbcyGmDuWOJ5Lufy2
-=J79v
+iEYEAREIAAYFAlNPkZUACgkQCaWpQKGI+9R+iQCfdxK3omiF79C6YgPYoWKrSTQd
+bDQAn0bT1xn0WfaiGj7dvYzXrH7GHQfn
+=CJtv
 -----END PGP SIGNATURE-----
